--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <title>Portfolio</title>
+    <title>프론트엔드 포트폴리오 | HW</title>
   </head>
   <body>
     <div id="root"></div>
