--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
-    <title>프론트엔드 포트폴리오 | HW</title>
+    <title>Document</title>
   </head>
   <body>
     <div id="root"></div>
